[gd_scene load_steps=12 format=3 uid="uid://duj6uvd8n7i0h"]

[ext_resource type="Texture2D" uid="uid://d23lp7xmi6nq1" path="res://enemy/BatVampire_Sheet.png" id="1_0iynh"]
[ext_resource type="Script" path="res://enemy/bat.gd" id="1_jowhx"]
[ext_resource type="Script" path="res://player/label.gd" id="3_siaoc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5a2fh"]
radius = 74.027

[sub_resource type="CircleShape2D" id="CircleShape2D_cie34"]
radius = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_m1tnx"]
atlas = ExtResource("1_0iynh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja8pt"]
atlas = ExtResource("1_0iynh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28mf8"]
atlas = ExtResource("1_0iynh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3mx8"]
atlas = ExtResource("1_0iynh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0yspn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1tnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja8pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28mf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3mx8")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l0mvb"]
radius = 6.0

[node name="Bat" type="CharacterBody2D"]
position = Vector2(0, 2)
collision_layer = 4
motion_mode = 1
script = ExtResource("1_jowhx")

[node name="AggroZone" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -2)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroZone"]
shape = SubResource("CircleShape2D_5a2fh")
debug_color = Color(0.970136, 0.126886, 0.303562, 0.42)

[node name="DetectionZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 2

[node name="DetectionZoneCollision2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_cie34")
debug_color = Color(0, 0.639525, 0.363399, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_0yspn")
animation = &"fly"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.57429
shape = SubResource("CircleShape2D_l0mvb")
metadata/_edit_group_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true

[node name="DebugStateLabel" type="Label" parent="."]
offset_left = -24.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = -19.0
theme_override_font_sizes/font_size = 32
text = "idle	"
script = ExtResource("3_siaoc")
metadata/_edit_use_anchors_ = true

[connection signal="state_change" from="." to="DebugStateLabel" method="_on_bat_state_change"]
[connection signal="body_shape_entered" from="DetectionZone" to="." method="_on_detection_zone_body_shape_entered"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
